--- a/styles/base.css
+++ b/styles/base.css
@@ -88,6 +88,12 @@ main {
     padding: 10px;
 }
 
+figcaption{
+
+    display: flex;
+    justify-content: center;
+}
+
 .title3 {
     display: flex;
     align-items: center;
