--- a/styles/temples.css
+++ b/styles/temples.css
@@ -68,7 +68,7 @@ main h2 {
 
 .gallery {
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr  ;
     gap: 20px;
 }
 
@@ -127,6 +127,9 @@ footer {
 }
 
 @media (max-width: 768px) {
+    .gallery{
+        grid-template-columns: 1fr;
+    }
 
     nav {
         display: none;
