--- a/styles/temples-filtered.css
+++ b/styles/temples-filtered.css
@@ -8,6 +8,7 @@
     --shadow: #6b66667e;
 }
 
+/* Fonts */
 .libre-baskerville-regular {
     font-family:Arial, Helvetica, sans-serif;
     font-weight: 400;
@@ -26,6 +27,8 @@
     font-style: italic;
 }
 
+
+/* Styles */
 * {
     margin: 0;
     padding: 0;
@@ -52,6 +55,7 @@ h1 {
     padding: 2rem;
    
 }
+
 #hambutton {
     background-color: var(--bookend-background);
     color: var(--bookend-text);
@@ -84,7 +88,7 @@ nav {
 nav a {
   color:white;
   text-decoration: none;
-  padding: 0rem;
+  padding: 1rem;
   display: none;
   font-size: 1rem;
 }
@@ -160,4 +164,3 @@ footer {
 .card img {
     margin-top: .5rem;
 }
-
