--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -113,6 +113,7 @@ img{
     padding: 1rem 5rem;
     border-radius: 5px;
     transition: all .3s ease-in-out;
+    background-color:rgba(114, 7, 7, 0.427);
 }
 
 @media (min-width: 768px) {
