--- a/project/styles/style.css
+++ b/project/styles/style.css
@@ -140,13 +140,10 @@ img{
 
 .btn-green {
     background-color: var(--green);
-    font-weight: bold;
-    font-family:var(--paragraph);
+    border: none;
     display: inline-block;
-    margin-top: 1rem;
     margin-bottom: 2rem;
-    border-radius: 1rem;
-    justify-content: center;
+    font-family: var(--paragraph);
 }
 
 .btn-red{
@@ -297,7 +294,7 @@ figure img{
 /*sobre nosotros*/
 
 .container-us {
-    padding-top: 4rem;  
+    padding-top: 5rem;  
 }
 
 
@@ -305,7 +302,7 @@ figure img{
     .container-us {
         display: flex;
         justify-content: space-between;
-        margin:8rem 12rem;
+        
         
     }
 }
@@ -460,4 +457,132 @@ h1, img{
 
 iframe{
     width: 100%;
+}
+
+.form-contact{
+    padding-top: 5rem;
+    
+}
+
+@media(min-width: 768px) {
+    .form-contact{
+        display: flex;
+    }
+}
+.information-contact{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.information-contact, .form{
+    flex: 0 0 calc(50% - 1rem);
+}
+
+.information-contact{
+    background-color: var(--dark);
+    padding: 2rem;
+}
+
+.information-contact h3, .information-contact p, .social-media i{
+    color: var(--white);
+}
+.information-contact h3{
+    font-size: 4rem;
+    font-family: var(--title);
+}
+
+.information-contact p{
+    font-size: 2.2rem;
+  
+}
+.information-contact i{
+    margin-right: 1rem;
+}
+
+.social-media{
+    font-size: 3rem;
+}
+
+.form{
+    padding: 5rem;
+}
+
+.input-form label{
+    display: block;
+    font-size: 2rem;
+    font-family: var(--paragraph);
+    margin-bottom: .5rem;
+}
+
+.input-form input, .input-form textarea{
+    width: 100%;
+}
+.input-form input, .input-form textarea{
+    padding: 1rem 1.6rem;
+    border: 1px solid #e1e1e1;
+    border-radius: 5px;
+    outline: none;
+    font-family: var(--paragraph);
+}
+.input-form textarea{
+    height: 20rem;
+    resize:none;
+}
+
+
+
+
+.footer-1{
+    margin-top: 5rem;
+    background-color: rgb(20,20,20);
+    padding: 5rem;
+}
+@media(min-width:768px){
+    .footer-container{
+        display: flex;
+        justify-content: space-between;
+    }
+
+}
+.info{
+    flex: 0 0 calc(25% - 1rem);
+    margin-bottom: 2rem;
+}
+.info h3, .info p{
+    color: var(--white);
+    text-align: center;
+}
+.info h3{
+    font-size: 2.2rem;
+}
+.info p{
+    font-size: 1.8rem;
+}
+
+.redes-pie{
+    text-align: center;
+}
+.info input[type="email"]{
+    font-family: var(--paragraph);
+    display: inline-block;
+    margin-bottom: 1rem;
+    padding: 1rem;
+    border-radius: 5px;
+    outline: none;
+    width: 100%;
+}
+
+.info input[type="submit"]{
+    padding: .5rem 2rem;
+    font-size: 1.8rem;
+    border-radius: 0;
+}
+.footer{
+    text-align: center;
+    background-color: var(--dark);
+    color: var(--white);
+    padding: 2rem;
+    font-size: 2rem;
 }
